[tool.poetry]
name = "ml-stock-prediction"
version = "0.1.0"
description = ""
authors = ["crotodev <133077707+crotodev@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.0"
yfinance = "^0.2.28"
scikit-learn = "^1.3.0"
jupyter = "^1.0.0"
matplotlib = "^3.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

